[metadata]
name = archaiq
url = https://github.com/netdesigner/archaiq
description = Set of essentials to quickly build microservices from scratch.
long_description = file: README.md, CHANGELOG.md, LICENSE
license = MIT
version = 0.0.1
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
packages = find:
python_requires = >=3.7
zip_safe = False

[flake8]
inline-quotes = single
max-complexity = 10
max-line-length = 120
multiline-quotes = double

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
disallow_untyped_calls = True
follow_imports = silent
no_implicit_reexport = True
python_version = 3.9
show_error_codes = True
strict_optional = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True

[tool:pytest]
testpaths = tests
addopts = --cov=archaiq --flake8 --mypy
